// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions custodianPricesUpdate 1`] = `
Object {
  "type": "custodianPrices",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions custodianStatesUpdate 1`] = `
Object {
  "type": "custodianStates",
  "value": Object {
    "test": "test",
  },
}
`;

exports[`actions getCustodianPrices 1`] = `
Array [
  Object {
    "type": "custodianPrices",
    "value": Object {
      "last": "last",
      "reset": "reset",
    },
  },
]
`;

exports[`actions getCustodianStates 1`] = `
Array [
  Object {
    "type": "custodianStates",
    "value": Object {
      "test": "test",
    },
  },
]
`;
